[package]
name = "tyl-llm-inference-port"
version = "0.1.0"
edition = "2021"
authors = ["TYL Framework Team"]
license = "AGPL-3.0"
repository = "https://github.com/the-yaml-life/tyl-llm-inference-port"
description = "LLM inference and completion port for TYL framework"
homepage = "https://github.com/the-yaml-life/tyl-llm-inference-port"
documentation = "https://docs.rs/tyl-llm-inference-port"
readme = "README.md"
keywords = ["llm", "inference", "hexagonal-architecture", "rust", "tyl-framework"]
categories = ["development-tools", "rust-patterns"]

[dependencies]
# TYL Framework Dependencies
tyl-errors = { git = "https://github.com/the-yaml-life/tyl-errors.git", branch = "main" }

# Core Dependencies
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["time"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
futures = "0.3"

[features]
default = []
# Mock adapter for testing and demonstration
mock = ["dep:tokio"]